--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "date-fns": "^1.30.1",
+    "graphql-request": "^1.8.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
