--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^2.6.5",
     "date-fns": "^1.30.1",
     "graphql-request": "^1.8.2",
+    "lodash": "^4.17.11",
     "vee-validate": "^2.2.11",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
