--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^1.30.1",
     "graphql-request": "^1.8.2",
     "lodash": "^4.17.11",
+    "pluralize": "^8.0.0",
     "vee-validate": "^2.2.11",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
